[package]
name = "market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = "1.1.0"
market-io.path = "io"

[build-dependencies]
market-io.path = "io"
gear-wasm-builder = "1.1.0"

[dev-dependencies]
gear-core = "1.1.0"
gtest = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0" }
hex = { version = "0.4", default-features = false }
tokio = "1"
